Fixes #381 - Custom field layout not wrapping properly with more than 4 fields in Inventory page

--- a/Binner/Binner.Web/ClientApp/src/custom.css
+++ b/Binner/Binner.Web/ClientApp/src/custom.css
@@ -1107,3 +1107,13 @@ ul.errors li.error:before {
   font-weight: 400;
   padding-right: 10px;
 }
+
+.ui.form .customFieldValues h3 {
+  border-bottom: 1px solid #2184d06c;
+  color: #2185d0;
+}
+
+.ui.form .customFieldValues div.fields {
+  display: flex;
+  flex-wrap: wrap;
+}
